# StudyAbroadAiBackend

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  main.py  pyproject.toml  requirements.txt  wrangler.toml
api/v1/: api.py
api/v1/endpoints/: chat.py  profile.py
core/: cache.py  config.py
schemas/: profile.py
services/: chat_service.py  profile_service.py  resume_service.py  search_service.py
